--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "moment-timezone": "0.5.43",
     "next": "13.4.5",
     "next-compose-plugins": "2.2.1",
+    "next-qrcode": "2.5.1",
     "nodemailer": "6.9.5",
     "number-to-words": "1.2.4",
     "pnpm": "7.29.1",
